# spryx-http-py

./: mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi-publish.yml
spryx_http/: __init__.py  async_client.py  base.py  exceptions.py  models.py  resource.py  retry.py  settings.py  sync_client.py
tests/: test_basic.py  test_optional_base_url.py  test_retry.py  test_spryx_async_client.py  test_spryx_async_client_backup.py  test_spryx_exception_handling.py
